--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Primary SEO Meta Tags -->
+<meta name="title" content="Zhev Education Abroad – Study Abroad Consultancy India">
+<meta name="description" content="Zhev Education helps students study in the USA, UK, Canada, Ireland, Australia & more. Admissions, visas, SOP/LOR, university selection, and complete study abroad support.">
+
+<!-- Keywords -->
+<meta name="keywords" content="study abroad, overseas education, Zhev Education, study in USA, study in Canada, study in UK, Ireland universities, student visa, abroad counselling India, international education consultancy">
+
+<!-- Author -->
+<meta name="author" content="Zhev Education Consultancy">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Zhev Education Abroad – Study Abroad Consultancy India">
+<meta property="og:description" content="Complete study abroad services: admissions, visas, SOP/LOR drafting, university shortlisting, and guidance for USA, UK, Canada, Ireland, Australia.">
+<meta property="og:url" content="https://zheveducation.com">
+<meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png"> <!-- You can change this later -->
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Zhev Education Abroad – Study Abroad Consultancy India">
+<meta name="twitter:description" content="Trusted study abroad consultancy offering admissions, visas, and university guidance.">
+<meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zhev Education Abroad | Home</title>
