--- a/about.html
+++ b/about.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- SEO Meta Tags for About Page -->
+<meta name="title" content="About Zhev Education – Study Abroad Consultancy">
+<meta name="description" content="Learn about Zhev Education, India’s trusted study abroad consultancy helping students get admissions in USA, UK, Canada, Ireland, Australia, and more.">
+<meta name="keywords" content="about Zhev Education, study abroad consultancy India, overseas education experts">
+<meta name="author" content="Zhev Education Consultancy">
+
+<!-- Open Graph -->
+<meta property="og:title" content="About Zhev Education – Study Abroad Consultancy">
+<meta property="og:description" content="Know more about Zhev Education’s mission and expertise in guiding students to top global universities.">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:title" content="About Zhev Education – Study Abroad Consultancy">
+<meta name="twitter:description" content="Information about Zhev Education’s experience in study abroad counselling.">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us</title>
