--- a/services.html
+++ b/services.html
@@ -6,6 +6,20 @@
   <title>Our Services</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
+  <!-- SEO Meta Tags for Services Page -->
+<meta name="title" content="Study Abroad Services – Zhev Education">
+<meta name="description" content="Explore Zhev Education’s services: university shortlisting, SOP/LOR drafting, visa filing, application support, and study abroad counselling.">
+<meta name="keywords" content="study abroad services, university application help, visa filing, SOP LOR assistance, Zhev Education services">
+<meta name="author" content="Zhev Education Consultancy">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Study Abroad Services – Zhev Education">
+<meta property="og:description" content="Complete study abroad services including admissions, visas, SOPs, LORs, and counseling.">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:title" content="Study Abroad Services – Zhev Education">
+<meta name="twitter:description" content="Zhev Education’s range of study abroad services for students applying to top universities.">
 <body>
   <header>
     <h1>Our Services</h1>
