--- a/countries.html
+++ b/countries.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- SEO Meta Tags for Countries Page -->
+<meta name="title" content="Study Destinations – USA, UK, Canada, Ireland, Australia | Zhev Education">
+<meta name="description" content="Explore top study abroad destinations including USA, UK, Canada, Ireland, Australia, and New Zealand with Zhev Education’s expert guidance.">
+<meta name="keywords" content="study abroad countries, study USA, study UK, study Canada, study Ireland, study Australia, overseas education destinations">
+<meta name="author" content="Zhev Education Consultancy">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Top Study Abroad Destinations – Zhev Education">
+<meta property="og:description" content="Learn about major study abroad destinations and how Zhev Education guides students to universities worldwide.">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:title" content="Study Abroad Destinations – Zhev Education">
+<meta name="twitter:description" content="Explore leading study abroad countries and opportunities for international students.">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Countries We Serve</title>
