--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- SEO Meta Tags for Contact Page -->
+<meta name="title" content="Contact Zhev Education – Study Abroad Consultancy India">
+<meta name="description" content="Get in touch with Zhev Education for study abroad counselling, admissions support, visa guidance, and university selection assistance.">
+<meta name="keywords" content="contact Zhev Education, study abroad help, education consultancy contact, student visa help, overseas education support">
+<meta name="author" content="Zhev Education Consultancy">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Contact Zhev Education – Study Abroad Consultancy">
+<meta property="og:description" content="Reach out to our expert counsellors for study abroad queries and support.">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:title" content="Contact Zhev Education – Study Abroad Consultancy">
+<meta name="twitter:description" content="Contact Zhev Education for guidance on admissions, visas, SOP/LOR, and study abroad services.">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us</title>
@@ -21,7 +35,7 @@
   <section>
     <h2>Get in Touch</h2>
     <p>Email: info@zheveducation.com</p>
-    <p>Phone: +91 99672 00345</p>
+    <p>Phone: +91 95945 38979</p>
     <p>Location: Mumbai, India</p>
   </section>
 
