--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
   <!-- Primary SEO Meta Tags -->
 <meta name="title" content="Zhev Education Abroad – Study Abroad Consultancy India">
 <meta name="description" content="Zhev Education helps students study in the USA, UK, Canada, Ireland, Australia & more. Admissions, visas, SOP/LOR, university selection, and complete study abroad support.">
