--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="canonical" href="https://zheveducation.com/">
   <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
   <!-- Primary SEO Meta Tags -->
 <meta name="title" content="Zhev Education Abroad – Study Abroad Consultancy India">
