--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="canonical" href="https://zheveducation.com/about.html">
   <!-- SEO Meta Tags for About Page -->
 <meta name="title" content="About Zhev Education – Study Abroad Consultancy">
 <meta name="description" content="Learn about Zhev Education, India’s trusted study abroad consultancy helping students get admissions in USA, UK, Canada, Ireland, Australia, and more.">
