--- a/countries.html
+++ b/countries.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="canonical" href="https://zheveducation.com/countries.html">
   <!-- SEO Meta Tags for Countries Page -->
 <meta name="title" content="Study Destinations – USA, UK, Canada, Ireland, Australia | Zhev Education">
 <meta name="description" content="Explore top study abroad destinations including USA, UK, Canada, Ireland, Australia, and New Zealand with Zhev Education’s expert guidance.">
