--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
   <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
   <!-- Primary SEO Meta Tags -->
-  <meta name="title" content="Zhev Education Abroad – Study Abroad Consultancy India">
-  <meta name="description" content="Zhev Education helps students study in the USA, UK, Canada, Ireland, Australia & more. Admissions, visas, SOP/LOR, university selection, and complete study abroad support.">
-
-  <!-- Keywords -->
-  <meta name="keywords" content="study abroad, overseas education, Zhev Education, study in USA, study in Canada, study in UK, Ireland universities, student visa, abroad counselling India, international education consultancy">
-
-  <!-- Author -->
+  <title>Zhev Education Abroad – Study Abroad Consultancy India | Study in USA, UK, Canada</title>
+  <meta name="description" content="Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand. Admissions, visas, SOP/LOR drafting, university shortlisting, and career pathways.">
+  <meta name="keywords" content="study abroad, study in USA, study in UK, study in Canada, MS in CS, study computer science abroad, best universities for computer science in USA, study abroad consultants in India, student visa consultancy, study abroad scholarships">
   <meta name="author" content="Zhev Education Consultancy">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Zhev Education Abroad – Study Abroad Consultancy India">
-  <meta property="og:description" content="Complete study abroad services: admissions, visas, SOP/LOR drafting, university shortlisting, and guidance for USA, UK, Canada, Ireland, Australia.">
-  <meta property="og:url" content="https://zheveducation.com">
+  <meta property="og:description" content="Your trusted partner for admissions, visas, SOP/LOR and university shortlisting for USA, UK, Canada, Ireland, Australia.">
+  <meta property="og:url" content="https://zheveducation.com/">
   <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
   <!-- Twitter -->
@@ -29,65 +25,13 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zhev Education Abroad | Home</title>
-
   <link rel="stylesheet" href="assets/style.css" />
-
-  <style>
-    /* Hamburger styling inside index only */
-    .hamburger {
-      display: none;
-      font-size: 28px;
-      cursor: pointer;
-      color: #fff;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        background: #003366;
-        padding: 10px;
-      }
-      nav a {
-        display: block;
-        margin: 10px 0;
-      }
-      .hamburger {
-        display: block;
-      }
-      header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      header h1 {
-        font-size: 18px;
-      }
-    }
-  </style>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("menu");
-      if (nav.style.display === "block") {
-        nav.style.display = "none";
-      } else {
-        nav.style.display = "block";
-      }
-    }
-  </script>
-
+  <title>Zhev Education Abroad | Home</title>
 </head>
 <body>
-
   <header>
     <h1>Zhev Education Abroad Consultancy</h1>
-
-    <!-- Hamburger Icon (Mobile Only) -->
-    <div class="hamburger" onclick="toggleMenu()">☰</div>
-
-    <!-- Navigation Menu -->
-    <nav id="menu">
+    <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
@@ -98,13 +42,65 @@
 
   <section class="hero">
     <h2>Study Abroad With Confidence</h2>
-    <p>Your trusted partner for global admissions, visas, test prep, and career pathways.</p>
+    <p>
+      Zhev Education is a full-service international education consultancy based in India helping students
+      apply to top universities for undergraduate and graduate study. Whether you want to study computer
+      science in the USA, pursue an MBA in the UK, or explore MS in Data Science in Canada, our team
+      provides university shortlisting, application filing, SOP & LOR drafting, visa guidance, and
+      pre-departure support. We specialise in helping Indian students secure admissions and scholarships
+      at reputed institutions and navigate post-study work visa pathways.
+    </p>
     <a href="services.html" class="btn">Explore Services</a>
   </section>
 
-  <footer>
-    <p>© 2025 Zhev Education Abroad Consultancy</p>
-  </footer>
+  <section>
+    <h2>What We Do</h2>
+    <p>
+      We provide personalised counselling, accurate eligibility assessments for MS in CS, MBA and other
+      programs, and tailored university lists for the USA, UK, Canada, Ireland, Australia and New Zealand.
+      Our service covers application strategy, SOP writing, LOR coordination, resume polish, scholarships
+      research, education loan assistance, and visa interview prep. We focus on evidence-based guidance,
+      up-to-date admission criteria, and practical timelines so your application has the best chance.
+    </p>
 
+    <h3>Why students pick Zhev Education</h3>
+    <ul>
+      <li>Targeted shortlists for top ranked CS and engineering programs</li>
+      <li>Experienced SOP & LOR authors tuned to program intent</li>
+      <li>Visa filing & interview preparation with high success rates</li>
+      <li>Assistance with scholarships, loans and pre-departure logistics</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Top Destinations & Programs</h2>
+    <p>
+      Popular choices include Study in USA (MS in CS, Data Science), Study in Canada (PGWP pathways),
+      Study in UK (1-year Masters), Study in Ireland (good STEM outcomes), and Study in Australia
+      (work visas). We also guide students to affordable and high-value options in Europe and New Zealand.
+    </p>
+  </section>
+
+  <section>
+    <h2>Testimonials</h2>
+    <div class="grid">
+      <div class="card">
+        <strong>Rohit K., MS in CS (USA)</strong>
+        <p>"Zhev Education helped me shortlist universities and rewrite my SOP — I got into three top programs. Highly recommended."</p>
+      </div>
+      <div class="card">
+        <strong>Pooja M., MBA (UK)</strong>
+        <p>"Professional guidance on applications and visa preparation. The team was supportive throughout."</p>
+      </div>
+      <div class="card">
+        <strong>Arjun S., MS Data Science (Canada)</strong>
+        <p>"Excellent counselling and scholarship advice — saved me significant fees."</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Zhev Education Abroad Consultancy — Email: info@zheveducation.com • Phone: +91 99672 00345</p>
+  </footer>
 </body>
 </html>
