--- a/countries.html
+++ b/countries.html
@@ -2,24 +2,27 @@
 <html lang="en">
 <head>
   <link rel="canonical" href="https://zheveducation.com/countries.html">
-  <!-- SEO Meta Tags for Countries Page -->
-<meta name="title" content="Study Destinations – USA, UK, Canada, Ireland, Australia | Zhev Education">
-<meta name="description" content="Explore top study abroad destinations including USA, UK, Canada, Ireland, Australia, and New Zealand with Zhev Education’s expert guidance.">
-<meta name="keywords" content="study abroad countries, study USA, study UK, study Canada, study Ireland, study Australia, overseas education destinations">
-<meta name="author" content="Zhev Education Consultancy">
+  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-<!-- Open Graph -->
-<meta property="og:title" content="Top Study Abroad Destinations – Zhev Education">
-<meta property="og:description" content="Learn about major study abroad destinations and how Zhev Education guides students to universities worldwide.">
-<meta property="og:type" content="website">
+  <title>Top Study Destinations – USA, UK, Canada, Ireland, Australia | Zhev Education</title>
+  <meta name="description" content="Explore top study destinations (USA, UK, Canada, Ireland, Australia, New Zealand) with Zhev Education. Get program guidance for MS in CS, MBA, Data Science and scholarships.">
+  <meta name="keywords" content="study in USA, study in UK, study in Canada, study in Ireland, study in Australia, top destinations for international students, MS in CS USA, MBA UK">
+  <meta name="author" content="Zhev Education Consultancy">
 
-<!-- Twitter -->
-<meta name="twitter:title" content="Study Abroad Destinations – Zhev Education">
-<meta name="twitter:description" content="Explore leading study abroad countries and opportunities for international students.">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Top Study Destinations – Zhev Education">
+  <meta property="og:description" content="Compare study in USA, Canada, UK, Ireland and Australia. Program highlights, work visas, and scholarship options.">
+  <meta property="og:url" content="https://zheveducation.com/countries.html">
+  <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Top Study Destinations – Zhev Education">
+  <meta name="twitter:description" content="Guidance for international students on country specific intakes, visa pathways and top universities.">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Countries We Serve</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <title>Countries We Serve</title>
 </head>
 <body>
   <header>
@@ -34,14 +37,59 @@
   </header>
 
   <section>
-    <h2>Top Destinations</h2>
+    <h2>Study in USA</h2>
+    <p>
+      The USA is a top destination for MS in Computer Science, Data Science and STEM programs with leading
+      universities like MIT, Stanford, CMU and many public research institutions. Our services for Study in USA
+      include university shortlisting, GRE/TOEFL/IELTS strategy, SOP & LOR preparation, scholarship searches,
+      and F1 visa preparation. We advise on STEM OPT opportunities and long-term career planning.
+    </p>
+
+    <h2>Study in Canada</h2>
+    <p>
+      Canada offers strong PGWP pathways, affordable fees and growing tech hubs. We help students apply to
+      top Canadian universities and colleges, prepare for study permits, and optimise applications for
+      scholarship and PR pathways. Data Science and MS in CS are highly popular among Indian students.
+    </p>
+
+    <h2>Study in UK & Ireland</h2>
+    <p>
+      The UK has one-year Masters options and diverse scholarship opportunities. Ireland is a growing hub
+      for tech talent with strong industry links. We provide targeted lists for one-year MSc programs,
+      guidance on the Graduate Route (UK) and PSW options (Ireland), and interview/visa coaching.
+    </p>
+
+    <h2>Study in Australia & New Zealand</h2>
+    <p>
+      Australia and New Zealand provide quality programs with clear post-study work options. We guide
+      students through intake choices, visa rules, recognition of credentials, and on-campus support.
+    </p>
+  </section>
+
+  <section>
+    <h2>How We Help You Choose</h2>
+    <p>
+      We evaluate your academic profile, budget, career goals and scholarship eligibility. For technical
+      programs like MS in CS or Data Science, we recommend universities with strong research labs and
+      internship pipelines. For management programs, our counsellors focus on placements and ROI.
+    </p>
+  </section>
+
+  <section>
+    <h2>Testimonials</h2>
     <div class="grid">
-      <div class="card">USA</div>
-      <div class="card">Canada</div>
-      <div class="card">UK</div>
-      <div class="card">Ireland</div>
-      <div class="card">Australia</div>
-      <div class="card">New Zealand</div>
+      <div class="card">
+        <strong>Priya K.</strong>
+        <p>"Great insights on country choice and visa guidance — helped me pick the right university."</p>
+      </div>
+      <div class="card">
+        <strong>Rahul D.</strong>
+        <p>"Practical advice on scholarships and living costs made planning simple."</p>
+      </div>
+      <div class="card">
+        <strong>Simran B.</strong>
+        <p>"Excellent counselling for MS in Data Science choices."</p>
+      </div>
     </div>
   </section>
 
