--- a/about.html
+++ b/about.html
@@ -2,24 +2,27 @@
 <html lang="en">
 <head>
   <link rel="canonical" href="https://zheveducation.com/about.html">
-  <!-- SEO Meta Tags for About Page -->
-<meta name="title" content="About Zhev Education – Study Abroad Consultancy">
-<meta name="description" content="Learn about Zhev Education, India’s trusted study abroad consultancy helping students get admissions in USA, UK, Canada, Ireland, Australia, and more.">
-<meta name="keywords" content="about Zhev Education, study abroad consultancy India, overseas education experts">
-<meta name="author" content="Zhev Education Consultancy">
+  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-<!-- Open Graph -->
-<meta property="og:title" content="About Zhev Education – Study Abroad Consultancy">
-<meta property="og:description" content="Know more about Zhev Education’s mission and expertise in guiding students to top global universities.">
-<meta property="og:type" content="website">
+  <title>About Zhev Education – Study Abroad Consultancy India</title>
+  <meta name="description" content="About Zhev Education: experienced study abroad consultants in India offering admissions, visa support, SOP/LOR services and personalised university shortlists for USA, UK, Canada and Australia.">
+  <meta name="keywords" content="about Zhev Education, study abroad consultants India, study in USA, study in UK, study in Canada, education consultancy, international student services">
+  <meta name="author" content="Zhev Education Consultancy">
 
-<!-- Twitter -->
-<meta name="twitter:title" content="About Zhev Education – Study Abroad Consultancy">
-<meta name="twitter:description" content="Information about Zhev Education’s experience in study abroad counselling.">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="About Zhev Education – Study Abroad Consultancy India">
+  <meta property="og:description" content="Zhev Education is a trusted education consultancy guiding students to top universities in USA, UK, Canada, Ireland and Australia.">
+  <meta property="og:url" content="https://zheveducation.com/about.html">
+  <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About Zhev Education – Study Abroad Consultancy India">
+  <meta name="twitter:description" content="Learn about our team, experience and approach to international admissions and visas.">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <title>About Us</title>
 </head>
 <body>
   <header>
@@ -34,9 +37,49 @@
   </header>
 
   <section>
-    <h2>Who We Are</h2>
-    <p>We are an India-based international education consultancy helping students secure admissions in top global universities.</p>
-    <p>With 5+ years of expertise in recruitment and admissions, we provide transparent guidance for every student.</p>
+    <h2>Our Mission & Experience</h2>
+    <p>
+      Zhev Education was founded to simplify the complex process of studying abroad for Indian students.
+      Our mission is to provide transparent, practical guidance for admissions to top ranked programs —
+      including MS in Computer Science, MBA programs, Data Science masters, and healthcare degrees.
+      Our consultants have industry experience in university admissions, test preparation strategies and visa
+      procedures. We curate personalised university shortlists for the USA, UK, Canada, Ireland, Australia and
+      New Zealand with a focus on outcomes — scholarship chances, employability, and post-study work pathways.
+    </p>
+
+    <h2>Our Approach</h2>
+    <p>
+      We use a step-by-step process: eligibility assessment, program matching, application calendar,
+      document preparation (SOP/LOR/resume), scholarship research, and visa interview coaching.
+      For program specific help like MS in CS or Data Science, we provide targeted SOP revisions and
+      technical resume alignment that highlights projects, internships and publications.
+    </p>
+
+    <h2>Team & Credentials</h2>
+    <p>
+      Our team includes former admission officers, test prep specialists and visa consultants. We maintain
+      direct relationships with partner universities for timely updates on cutoffs, scholarships and intake
+      options. We also support education loan assistance and pre-departure briefings so students travel
+      prepared and confident.
+    </p>
+  </section>
+
+  <section>
+    <h2>Testimonials</h2>
+    <div class="grid">
+      <div class="card">
+        <strong>Neha R.</strong>
+        <p>"Detailed guidance and clear timelines. I received an admission offer from my top choice."</p>
+      </div>
+      <div class="card">
+        <strong>Vikram P.</strong>
+        <p>"SOP and interview prep helped me secure a scholarship. Highly professional team."</p>
+      </div>
+      <div class="card">
+        <strong>Shweta L.</strong>
+        <p>"Great support with visa documents and pre-departure checklist."</p>
+      </div>
+    </div>
   </section>
 
   <footer>
