--- a/services.html
+++ b/services.html
@@ -2,25 +2,28 @@
 <html lang="en">
 <head>
   <link rel="canonical" href="https://zheveducation.com/services.html">
+  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
+
+  <title>Study Abroad Services – University Applications, SOP, Visa | Zhev Education</title>
+  <meta name="description" content="Comprehensive study abroad services: university shortlisting, SOP & LOR drafting, application filing, scholarship research, visa assistance and loan support for USA, UK, Canada, Ireland, Australia.">
+  <meta name="keywords" content="study abroad services, university shortlisting, SOP writing, LOR assistance, student visa consultancy, scholarship research, education loan assistance, MS in CS services">
+  <meta name="author" content="Zhev Education Consultancy">
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Study Abroad Services – Zhev Education">
+  <meta property="og:description" content="University shortlisting, SOP/LOR writing, visa support and application filing for international students.">
+  <meta property="og:url" content="https://zheveducation.com/services.html">
+  <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Study Abroad Services – Zhev Education">
+  <meta name="twitter:description" content="Complete support for admissions, visas, scholarships and pre-departure logistics.">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Services</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <title>Our Services</title>
 </head>
-  <!-- SEO Meta Tags for Services Page -->
-<meta name="title" content="Study Abroad Services – Zhev Education">
-<meta name="description" content="Explore Zhev Education’s services: university shortlisting, SOP/LOR drafting, visa filing, application support, and study abroad counselling.">
-<meta name="keywords" content="study abroad services, university application help, visa filing, SOP LOR assistance, Zhev Education services">
-<meta name="author" content="Zhev Education Consultancy">
-
-<!-- Open Graph -->
-<meta property="og:title" content="Study Abroad Services – Zhev Education">
-<meta property="og:description" content="Complete study abroad services including admissions, visas, SOPs, LORs, and counseling.">
-<meta property="og:type" content="website">
-
-<!-- Twitter -->
-<meta name="twitter:title" content="Study Abroad Services – Zhev Education">
-<meta name="twitter:description" content="Zhev Education’s range of study abroad services for students applying to top universities.">
 <body>
   <header>
     <h1>Our Services</h1>
@@ -34,15 +37,71 @@
   </header>
 
   <section>
-    <h2>What We Offer</h2>
+    <h2>Comprehensive Application Support</h2>
+    <p>
+      Zhev Education offers end-to-end services for students planning to study abroad. Our application
+      support covers university shortlisting (targeting top ranked CS, engineering and management programs),
+      personalised admission strategies, application form filling, deadline tracking and document uploads.
+      We help students prepare for competitive programs like MS in Computer Science, MS in Data Science,
+      MBA, and other masters and bachelor programs abroad.
+    </p>
+
+    <h3>SOP, LOR & Resume Services</h3>
+    <p>
+      Our SOP (Statement of Purpose) service includes multiple drafts, targeted edits for program intent,
+      and industry-aligned language that highlights projects, internships and research. We coordinate LOR
+      collection guidelines with recommenders and help craft resumes that match international admissions
+      expectations (technical resumes for CS applicants, project portfolios for design & architecture).
+    </p>
+
+    <h3>Scholarships & Education Loans</h3>
+    <p>
+      We research university scholarships, country-level scholarships and external grants relevant to each
+      student profile. We also guide students through education loan documentation and lender selection,
+      including loan options with or without collateral where available.
+    </p>
+
+    <h3>Visa Assistance & Interview Prep</h3>
+    <p>
+      Visa filing support includes document checks, mock interviews, and guidance on country-specific
+      visa policies (F1 for USA, Study Visa for UK, Student Direct Stream for Canada). We prepare students
+      for likely interview questions and compile evidence packages for visa officers.
+    </p>
+
+    <h3>Pre-Departure & Post-Arrival Support</h3>
+    <p>
+      Pre-departure briefings include accommodation guidance, health insurance advice, packing checklists,
+      and orientation on banking & local transport. Post-arrival help covers bank account setup, local SIM,
+      and initial orientations with partner universities where possible.
+    </p>
+  </section>
+
+  <section>
+    <h2>Service Packages</h2>
     <ul>
-      <li>University Shortlisting</li>
-      <li>Application Filing</li>
-      <li>SOP, LOR & Resume Drafting</li>
-      <li>Education Loan Assistance</li>
-      <li>Visa Filing & Interview Prep</li>
-      <li>Pre-Departure Briefing</li>
+      <li><strong>Apply Smart:</strong> University shortlisting + SOP review + application checks</li>
+      <li><strong>Apply Complete:</strong> Full application filing + LOR coordination + scholarship search</li>
+      <li><strong>Visa Secure:</strong> Document package + mock interviews + visa filing checklist</li>
+      <li><strong>All-Inclusive:</strong> End-to-end service including loans, pre-departure & post-arrival support</li>
     </ul>
+  </section>
+
+  <section>
+    <h2>Testimonials</h2>
+    <div class="grid">
+      <div class="card">
+        <strong>Devansh R.</strong>
+        <p>"Their SOP team helped me craft an application for MS in CS and I secured admission with scholarship."</p>
+      </div>
+      <div class="card">
+        <strong>Meera S.</strong>
+        <p>"Complete visa prep and mock interviews made the process stress free."</p>
+      </div>
+      <div class="card">
+        <strong>Samir A.</strong>
+        <p>"Detailed guidance on loan documentation and scholarship options."</p>
+      </div>
+    </div>
   </section>
 
   <footer>
